DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2001-07-27 patrick  Removed the compiler flags dealing with warnings from the
                    output of 'vpr-config --cxxflags'.
2001-07-24 allenb   Changed socket bridge templates to use boost::shared_ptr
                    to reference the impl sockets.  This change introduces
                    reference counting on the impl sockets and makes
                    memory management much easier to handle.
2001-07-24 allenb   Added destructor code to SocketNSPRImpl.
2001-07-23 allenb   Added vprTest::BoostTest for testing boost functionality
                    required for vapor and other Juggler libs.
2001-07-22 allenb   Replace vpr::Status with vpr::ReturnStatus
2001-07-21 allenb   Imported Boost 1.0.23. ( www.boost.org )
2001-07-20 patrick  The vpr::Socket connect() method now uses its timeout to
                    wait for the connection to complete on a non-blocking
                    socket.
2001-07-20 allenb   The broken semantics of vpr::SocketConnector when using
                    non-blocking sockets have been corrected.
2001-07-17 patrick  Read/write calls take a vpr::Uint32 for their by-reference
                    out parameter giving the number of bytes read or written.
2001-07-13 patrick  Read/write calls return vpr::Status::WouldBlock instead of
                    vpr::Status::InProgress for non-blocking configurations.
2001-07-12 patrick  The internal platform-specific I/O implementation classes
                    no longer inherit from vpr::BlockIO.
2001-06-28 patrick  Non-blocking socket support (mostly) added.
2001-06-25 allenb   Added timeout interval param to nearly every I/O
                    method in the library.
2001-06-24 allenb   Added vpr::Interval class
2001-06-21 patrick  Completed work needed to build a DLL on Win32.
2001-06-21 browner  Added a wrapper around the serial device API on Win32.